# review-council

./: .coderabbit.yaml  .dockerignore  .gitignore  CHANGELOG.md  CODE-CONCLAVE-DEV-PLAN.md  CONTRACTS.md  CONTRIBUTING.md  Dockerfile  HANDOFF-TESTS.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  package-lock.json  pyproject.toml  review-council.bat  review-council.ps1  setup-github.ps1  start-dashboard.ps1
.claude/: CLAUDE.md
.github/workflows/: ci.yml  code-conclave.yml
agents/: guardian.md  navigator.md  operator.md  sentinel.md
cli/: Test-Providers.ps1  ccl.bat  ccl.ps1
cli/commands/: map.ps1  report.ps1  standards.ps1
cli/config/: ccl.config.example.yaml
cli/lib/: ai-engine.ps1  config-loader.ps1  findings-parser.ps1  junit-formatter.ps1  mapping-engine.ps1  project-scanner.ps1  yaml-parser.ps1
cli/tests/: ai-engine.Tests.ps1  config-loader.Tests.ps1  findings-parser.Tests.ps1  junit-formatter.Tests.ps1  project-scanner.Tests.ps1
core/agents/: architect.md  guardian.md  herald.md  navigator.md  operator.md  sentinel.md  validator.md
core/templates/: executive-summary.md  gap-analysis.md  traceability-matrix.md
dashboard/: index.html  package-lock.json  package.json  server.js  server.test.js
docker/: .dockerignore  Dockerfile
docs/: ADO-INSTALLATION.md  AGENTS.md  BUG-ANALYSIS-SYNTHESIS-REPORT.md  CI-CD.md  CLI.md  CONFIGURATION.md  COST-OPTIMIZATION.md  FALSE-POSITIVE-ANALYSIS-2026-02-11.md  GRR-STUDY-2026-02-11.md  INDEX.md  INSTALLATION.md  OPERATIONS.md  PITCH-REPORT.md  README.md  REVIEW-COUNCIL-METHODOLOGY.md  SPECIFICATION.md  STANDARDS-IN-PR-REVIEWS.md  STANDARDS.md  config-schema.yaml
docs/code-conclave-reports/: conclave-results.xml
pipelines/: azure-pipelines-conclave.yml  azure-pipelines.yml  github-actions.yml
src/conclave/: __init__.py
tests/: conftest.py
(+59 files in other folders)
