[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-conclave"
version = "3.0.0"
description = "AI-powered code review with compliance mapping"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "BLB3D"},
]
keywords = ["code-review", "ai", "compliance", "security", "quality"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.25",
    "pyyaml>=6.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "jinja2>=3.1",
    "structlog>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "respx>=0.21",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.scripts]
rc = "conclave.cli.rc:main"
ccl = "conclave.cli.ccl:main"

[project.urls]
Homepage = "https://github.com/Blb3D/code-conclave"
Repository = "https://github.com/Blb3D/code-conclave"

[tool.hatch.build.targets.sdist]
include = ["src/conclave"]

[tool.hatch.build.targets.wheel]
packages = ["src/conclave"]
artifacts = ["src/conclave/data/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
norecursedirs = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
